# learning

aws/cloudformation-http-lambda/: README.md  cloudformation.yml  samconfig.toml
aws/github-oauth-user-lambda/: data_ops.js  data_ops.test.js  github_api.js  oauth2.js  oauth2.test.js  package.json  update-code.sh
aws/provision-multi-env-arch/: ansible.cfg  eighty4-dev-screem.tf  eighty4-inf-bastion.tf  eighty4-inf-postgres.tf  eighty4-routes.tf  eighty4-security.tf  eighty4-vpc-inf.tf  eighty4-vpc.tf
c-plus-plus/build-tooling/cmake/libhsl/: CMakeLists.txt  hsl.cc  hsl.h  hsl_test.cc
c-plus-plus/encode-bmp-image/: CMakeLists.txt  README.md  write_bitmap.cc
c-plus-plus/ffmpeg-with-libvpx-build/: CMakeLists.txt  README.md
c-plus-plus/libgit2/: osx_build.sh
c-plus-plus/libwebp-build-steps/: README.md  libwebp_encoding.cc
c-plus-plus/openssl/: .gitignore  CMakeLists.txt  README.md  main.cc  tcp_client.js  tcp_server.js  tcp_socket.h  tcp_socket_posix.cc  tcp_socket_win.cc  tls_socket.cc  tls_socket.h  vcpkg.json
c-plus-plus/webrtc/: README.md  libwebrtc.py
c-plus-plus/webrtc/desktop_capture/: CMakeLists.txt  webrtc_desktop_capture.cc
elasticsearch/create-index-and-mapping/: package.json
electron/native-binding/: README.md  index.html  main.js  package.json  preload.js  renderer.js
flutter/contour-animation/: README.md  pubspec.yaml
flutter/dragndrop/: README.md  pubspec.yaml
flutter/focus-node/: README.md  pubspec.yaml
flutter/future-builder/: README.md  pubspec.yaml
flutter/stream-builder/: .metadata  README.md  pubspec.yaml
gcloud/cloud-run-and-scheduler/: README.md
graalvm/hello-world/: README.md  build.gradle
graalvm/script-engine/: README.md  settings.gradle
hashicorp/consul-dns/: .gitignore  README.md  Vagrantfile
java/annotation-processor/: .gitignore  README.md  build.gradle  run-tests.sh  settings.gradle
jwt-identity/: .gitignore  compat-test.sh
jwt-identity/golang-jwt/: .gitignore  README.md  go.mod  jwt-keys.go  jwt-sign.go  jwt-verify.go
jwt-identity/nodejs-jwt/: README.md  jwt-keys.js  jwt-sign.js  jwt-verify.js  package.json
macos/swift-and-c/: .gitignore  README.md
nginx/local-https-proxying/: README.md  nginx.conf
nginx/rtmp-live-streaming/: index.html  nginx.conf
rtmp-live-streaming/: Dockerfile  README.md
(+433 files in other folders)
